--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -227,7 +227,7 @@ img.right{
     display:block;
 }
 .book-box .book-title a:hover {
-    color: #F89B2C;
+    color: #B46405;
 }
 .book-description{
     border: 1px solid #dadada;
