--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -600,3 +600,23 @@ div.pagination span.disabled {
 .text-italic {
     font-style: italic;
 }
+.margin-5 {
+    margin: 5px;
+}
+.margin-10{
+    margin: 10px;
+}
+.margin-15{
+    margin: 10px;
+}
+
+.padding-5 {
+    padding: 5px;
+}
+.padding-10{
+    padding: 10px;
+}
+.padding-15{
+    padding: 10px;
+}
+
