--- a/public/css/fe/bootstrap-override.css
+++ b/public/css/fe/bootstrap-override.css
@@ -40,3 +40,9 @@ a:hover, a:focus {
     outline: none;
     text-decoration: none;
 }
+.pagination {
+    margin: 2px 0;
+}
+.pagination ul>li>a, .pagination ul>li>span {
+    line-height: 14px;
+}
