--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -22,6 +22,9 @@ p{
     text-align:justify;
     line-height:19px;
 }
+.inline {
+    display: inline;
+}
 p.details{
     padding:5px 15px 5px 15px;
     font-size:11px;
@@ -216,7 +219,7 @@ img.right{
 
 .book-box{
     margin: 5px;
-    width:190px;
+    width: 190px;
     height:119px;
     padding:2px 10px;
     display: inline-block;
@@ -234,7 +237,6 @@ img.right{
 .book-description{
     border: 1px solid #dadada;
     min-height: 60px;
-    border-radius: 3px;
     padding: 5px;
 }
 .book-box .book-title {
@@ -394,11 +396,8 @@ a.view_cart{
     width:350px;
     padding:10px;
     border:1px #DFD1D2 solid;
-    border-radius: 5px;
-    position:relative;
-    position: absolute;
-    left: 50%;
-    margin-left: -175px;
+    border-radius: 4px;
+    margin: 0 auto;
     margin-top: 20px;
 }
 .form_row{
@@ -519,10 +518,8 @@ img.cart_thumb{
 }
 /*--------------*/
 div.pagination {
-    padding:5px;
-    margin:5px;
-    text-align:center;
-    float:left;
+    margin:10px;
+    float: right;
     clear:both;
     font-size:10px;
 }
@@ -591,8 +588,12 @@ div.pagination span.disabled {
 
 }
 
-.search-box{
+#search-box{
     float: right;
+    display: inline-block;
+}
+#search-box form {
+    margin: 0;
 }
 .text-muted {
     color: gray;
@@ -636,28 +637,70 @@ div.pagination span.disabled {
     min-width: 140px;
 }
 
-#books-index {
+#index-content-wrap {
     width: 700px;
     float:left;
-    border-right: 1px solid #dadada;
+    border-left: 2px solid #eee;
 }
-#right-sidebar{
-    width: 185px;
-    margin-left: 3px;
-    float:left;
+#index-content-wrap .section {
+    padding-left: 7px;
+    clear: both;
 }
-#right-sidebar .sidebar-box {
-
+#index-content-wrap .section .section-footer {
+    text-align: center;
 }
-#right-sidebar .sidebar-box h4 {
+#index-content-wrap .section .section-title h4{
     padding-left: 5px;
     color: #734633;
     font-size: 15px;
     font-weight: bold;
 }
-#right-sidebar .sidebar-box  ul li > a {
+
+#left-sidebar{
+    width: 185px;
+    margin-left: 3px;
+    float:left;
+}
+#left-sidebar .sidebar-box {
+
+}
+#left-sidebar .sidebar-box h4 {
+    padding-left: 5px;
+    color: #734633;
+    font-size: 15px;
+    font-weight: bold;
+}
+#left-sidebar .sidebar-box  ul li > a {
     color: #734633;
 }
-#right-sidebar .sidebar-box ul li > a:hover {
+#left-sidebar .sidebar-box ul li > a:hover {
     color: #B46405;
+}
+.article {
+    overflow-x: auto;
+    border-bottom: 1px solid#eee;
+}
+.article .article-title h4 {
+    font-size: 14px;
+    margin-bottom: 0;
+    color: #422D2D;
+}
+.article .article-title h4 .timestamp {
+    font-weight: 200;
+    font-style: italic;
+}
+.section-content {
+    margin: 0 10px;
+}
+#index-content-wrap > .section:not(:first-child) {
+    margin-top: 30px;
+}
+.article .article-content {
+    margin-top: 15px;   
+}
+.article a.read-more {
+    float: right;
+    color: #773434;
+    font-style: italic;
+    margin-right: 15px;
 }
